adding tojson scala file

--- a/workspace/Compare/src/main/resources/connection.properties
+++ b/workspace/Compare/src/main/resources/connection.properties
@@ -1,7 +1,7 @@
-jdbc.url =jdbc:mysql://localhost:3306/mysql?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-jdbc.driver =com.mysql.cj.jdbc.Driver
-jdbc.username =root
-jdbc.password =ASis@1104050
-jdbc.query=SELECT personid, lastname FROM test.persons
-filepath=C:\\Users\\siddharth\\Desktop\\intreview\\output.csv
-jsonoutput=C:\\Users\\siddharth\\Desktop\\intreview\\output.csv
+jdbc.url =jdbc:hive2://localhost/default
+jdbc.driver =com.apache.hive.jdbc.HiveDriver
+jdbc.username =default
+jdbc.password =default
+jdbc.query=SELECT Leadid from default.LEADLIST
+filepath=input.csv
+jsonoutput=output.csv
